--- a/config/config.json
+++ b/config/config.json
@@ -1,7 +1,7 @@
 {
   "development": {
     "username": "postgres",
-    "password": "",
+    "password": 123456,
     "database": "group-project",
     "host": "127.0.0.1",
     "dialect": "postgres"
